# RustONNX

./: .gitignore  LICENSE  README.md
rust-onnx/: Cargo.toml  build.rs
rust-onnx/models/resnet34-v2-7/test_data_set_0/: input_0.pb  output_0.pb
rust-onnx/py_rust_onnx/: test.py
rust-onnx/src/: lib.rs  main.rs
rust-onnx/src/datasets/: images_serialization.rs  label_mappings.rs  mod.rs
rust-onnx/src/models/: models.rs
rust-onnx/src/onnx_parser/: mod.rs  parser.rs
rust-onnx/src/operators/: mod.rs  op_add.rs  op_batchnorm.rs  op_conv_optimized.rs  op_flatten.rs  op_gemm.rs  op_globalaveragepooling.rs  op_matmul.rs  op_maxpool.rs  op_operator.rs  op_relu.rs  op_reshape.rs  operators.rs
rust-onnx/src/utils/: auxiliary_functions.rs  errors.rs  menu.rs  mod.rs  run.rs  serialization_utils.rs  shared_constants.rs
